@@ -36,6 +36,8 @@ import jakarta.ws.rs.WebApplicationException;
 import jakarta.ws.rs.core.Response;
 import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBException;
+
+import javax.xml.XMLConstants;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParserFactory;
 import javax.xml.transform.Source;
@@ -44,6 +46,7 @@ import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -67,17 +70,16 @@ public class ScriptServiceUtil {
      * @param script
      */
     public static ScriptTO scriptToTransferObject(Script script) {
-        ScriptTO ret = new ScriptTO();
-        ret.setComments(script.getComments());
-        ret.setCreated(script.getCreated());
-        ret.setCreator(script.getCreator());
-        ret.setId(script.getId());
-        ret.setModified(script.getModified());
-        ret.setName(script.getName());
-        ret.setProductName(script.getProductName());
-        ret.setRuntime(script.getRuntime());
-        ret.setSteps(scriptStepsToTransferobjectList(script.getScriptSteps()));
-        return ret;
+        return ScriptTO.builder()
+                .withComments(script.getComments())
+                .withCreated(script.getCreated())
+                .withCreator(script.getCreator())
+                .withId(script.getId())
+                .withModified(script.getModified())
+                .withName(script.getName())
+                .withProductName(script.getProductName())
+                .withSteps(scriptStepsToTransferobjectList(script.getScriptSteps()))
+                .build();
     }
 
     public static List<ScriptStepTO> scriptStepsToTransferobjectList(List<ScriptStep> steps) {
@@ -99,10 +101,7 @@ public class ScriptServiceUtil {
         s.setName(to.getName());
         s.setProductName(to.getProductName());
         s.setRuntime(to.getRuntime());
-
-        for (ScriptStepTO stepTo : to.getSteps()) {
-            s.addStep(transferObjectToScriptStep(stepTo));
-        }
+        to.getSteps().forEach(stepTO -> s.addStep(transferObjectToScriptStep(stepTO)));
         return s;
     }
 
@@ -111,43 +110,36 @@ public class ScriptServiceUtil {
      *            the step
      */
     public static ScriptStepTO scriptStepToTransferObject(ScriptStep step) {
-        ScriptStepTO ret = new ScriptStepTO();
-        ret.setUuid(step.getUuid());
-        ret.setScriptGroupName(step.getScriptGroupName());
-        ret.setMethod(step.getMethod());
-        ret.setType(step.getType());
-        ret.setLabel(step.getLabel());
-        ret.setUrl(step.getUrl());
-        ret.setResult(step.getResult());
-        ret.setMimetype(step.getMimetype());
-        ret.setLoggingKey(step.getLoggingKey());
-        ret.setName(step.getName());
-        ret.setOnFail(step.getOnFail());
-        ret.setStepIndex(step.getStepIndex());
-        ret.setPayload(step.getPayload());
-        if (step.getResponse() != null) {
-            try {
-                ret.setResponse(URLEncoder.encode(step.getResponse(), "utf-8"));
-            } catch (UnsupportedEncodingException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        ret.setSimplePath(step.getSimplePath());
-        ret.setHostname(step.getHostname());
-        ret.setProtocol(step.getProtocol());
-        ret.setComments(step.getComments());
-        ret.setRespFormat(step.getRespFormat());
-        ret.setReqFormat(step.getReqFormat());
-
-        ret.setData(convertData(step.getData()));
-        ret.setPostDatas(convertData(step.getPostDatas()));
-        ret.setQueryStrings(convertData(step.getQueryStrings()));
-        ret.setRequestCookies(convertData(step.getRequestCookies()));
-        ret.setRequestheaders(convertData(step.getRequestheaders()));
-        ret.setResponseCookies(convertData(step.getResponseCookies()));
-        ret.setResponseData(convertData(step.getResponseData()));
-        ret.setResponseheaders(convertData(step.getResponseheaders()));
-        return ret;
+        return ScriptStepTO.builder()
+                .withUuid(step.getUuid())
+                .withScriptGroupName(step.getScriptGroupName())
+                .withMethod(step.getMethod())
+                .withType(step.getType())
+                .withLabel(step.getLabel())
+                .withUrl(step.getUrl())
+                .withResult(step.getResult())
+                .withMimetype(step.getMimetype())
+                .withLoggingKey(step.getLoggingKey())
+                .withName(step.getName())
+                .withOnFail(step.getOnFail())
+                .withStepIndex(step.getStepIndex())
+                .withPayload(step.getPayload())
+                .withResponse((step.getResponse() != null) ? URLEncoder.encode(step.getResponse(), StandardCharsets.UTF_8) : null)
+                .withSimplePath(step.getSimplePath())
+                .withHostname(step.getHostname())
+                .withProtocol(step.getProtocol())
+                .withComments(step.getComments())
+                .withRespFormat(step.getRespFormat())
+                .withReqFormat(step.getReqFormat())
+                .withData(convertData(step.getData()))
+                .withPostDatas(convertData(step.getPostDatas()))
+                .withQueryStrings(convertData(step.getQueryStrings()))
+                .withRequestCookies(convertData(step.getRequestCookies()))
+                .withRequestheaders(convertData(step.getRequestheaders()))
+                .withResponseCookies(convertData(step.getResponseCookies()))
+                .withResponseData(convertData(step.getResponseData()))
+                .withResponseheaders(convertData(step.getResponseheaders()))
+                .build();
     }
 
     /**
@@ -155,43 +147,36 @@ public class ScriptServiceUtil {
      *            the step
      */
     public static ScriptStepTO copy(ScriptStepTO step) {
-        ScriptStepTO ret = new ScriptStepTO();
-        ret.setUuid(step.getUuid());
-        ret.setScriptGroupName(step.getScriptGroupName());
-        ret.setMethod(step.getMethod());
-        ret.setType(step.getType());
-        ret.setLabel(step.getLabel());
-        ret.setUrl(step.getUrl());
-        ret.setResult(step.getResult());
-        ret.setMimetype(step.getMimetype());
-        ret.setLoggingKey(step.getLoggingKey());
-        ret.setName(step.getName());
-        ret.setOnFail(step.getOnFail());
-        ret.setStepIndex(step.getStepIndex());
-        ret.setPayload(step.getPayload());
-        if (step.getResponse() != null) {
-            try {
-                ret.setResponse(URLEncoder.encode(step.getResponse(), "utf-8"));
-            } catch (UnsupportedEncodingException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        ret.setSimplePath(step.getSimplePath());
-        ret.setHostname(step.getHostname());
-        ret.setProtocol(step.getProtocol());
-        ret.setComments(step.getComments());
-        ret.setRespFormat(step.getRespFormat());
-        ret.setReqFormat(step.getReqFormat());
-
-        ret.setData(copyData(step.getData()));
-        ret.setPostDatas(copyData(step.getPostDatas()));
-        ret.setQueryStrings(copyData(step.getQueryStrings()));
-        ret.setRequestCookies(copyData(step.getRequestCookies()));
-        ret.setRequestheaders(copyData(step.getRequestheaders()));
-        ret.setResponseCookies(copyData(step.getResponseCookies()));
-        ret.setResponseData(copyData(step.getResponseData()));
-        ret.setResponseheaders(copyData(step.getResponseheaders()));
-        return ret;
+        return ScriptStepTO.builder()
+                .withUuid(step.getUuid())
+                .withScriptGroupName(step.getScriptGroupName())
+                .withMethod(step.getMethod())
+                .withType(step.getType())
+                .withLabel(step.getLabel())
+                .withUrl(step.getUrl())
+                .withResult(step.getResult())
+                .withMimetype(step.getMimetype())
+                .withLoggingKey(step.getLoggingKey())
+                .withName(step.getName())
+                .withOnFail(step.getOnFail())
+                .withStepIndex(step.getStepIndex())
+                .withPayload(step.getPayload())
+                .withResponse((step.getResponse() != null) ? URLEncoder.encode(step.getResponse(), StandardCharsets.UTF_8) : null)
+                .withSimplePath(step.getSimplePath())
+                .withHostname(step.getHostname())
+                .withProtocol(step.getProtocol())
+                .withComments(step.getComments())
+                .withRespFormat(step.getRespFormat())
+                .withReqFormat(step.getReqFormat())
+                .withData(copyData(step.getData()))
+                .withPostDatas(copyData(step.getPostDatas()))
+                .withQueryStrings(copyData(step.getQueryStrings()))
+                .withRequestCookies(copyData(step.getRequestCookies()))
+                .withRequestheaders(copyData(step.getRequestheaders()))
+                .withResponseCookies(copyData(step.getResponseCookies()))
+                .withResponseData(copyData(step.getResponseData()))
+                .withResponseheaders(copyData(step.getResponseheaders()))
+                .build();
     }
 
     public static ScriptStep transferObjectToScriptStep(ScriptStepTO to) {
@@ -204,13 +189,7 @@ public class ScriptServiceUtil {
         ret.setMimetype(to.getMimetype());
         ret.setLoggingKey(to.getLoggingKey());
         ret.setPayload(to.getPayload());
-        if (to.getResponse() != null) {
-            try {
-                ret.setResponse(URLDecoder.decode(to.getResponse(), "utf-8"));
-            } catch (UnsupportedEncodingException e) {
-                throw new RuntimeException(e);
-            }
-        }
+        ret.setResponse((to.getResponse() != null) ? URLDecoder.decode(to.getResponse(), StandardCharsets.UTF_8) : null);
         ret.setName(to.getName());
         ret.setOnFail(to.getOnFail());
         ret.setProtocol(to.getProtocol());
@@ -234,21 +213,16 @@ public class ScriptServiceUtil {
     }
 
     public static StepDataTO requestDataToTransferObject(RequestData data) {
-        StepDataTO ret = new StepDataTO();
-        ret.setKey(data.getKey());
-        ret.setValue(data.getValue());
-        ret.setType(data.getType());
-        ret.setPhase(data.getPhase().name());
-        return ret;
+        return StepDataTO.builder()
+                .withKey(data.getKey())
+                .withValue(data.getValue())
+                .withType(data.getType())
+                .withPhase(data.getPhase().name())
+                .build();
     }
 
     public static StepDataTO copyStepDataTO(StepDataTO data) {
-        StepDataTO ret = new StepDataTO();
-        ret.setKey(data.getKey());
-        ret.setValue(data.getValue());
-        ret.setType(data.getType());
-        ret.setPhase(data.getPhase());
-        return ret;
+        return data.toBuilder().build();
     }
 
     /**
@@ -278,16 +252,16 @@ public class ScriptServiceUtil {
      * @param script
      */
     public static ScriptDescription scriptToScriptDescription(Script script) {
-        ScriptDescription ret = new ScriptDescription();
-        ret.setComments(script.getComments());
-        ret.setCreated(script.getCreated());
-        ret.setCreator(script.getCreator());
-        ret.setId(script.getId());
-        ret.setModified(script.getModified());
-        ret.setName(script.getName());
-        ret.setProductName(script.getProductName());
-        ret.setRuntime(script.getRuntime());
-        return ret;
+        return ScriptDescription.builder()
+                .withComments(script.getComments())
+                .withCreated(script.getCreated())
+                .withCreator(script.getCreator())
+                .withId(script.getId())
+                .withModified(script.getModified())
+                .withName(script.getName())
+                .withProductName(script.getProductName())
+                .withRuntime(script.getRuntime())
+                .build();
     }
 
     /**
@@ -312,7 +286,10 @@ public class ScriptServiceUtil {
      * @return
      */
     private static Set<RequestData> convertDataTO(Set<StepDataTO> data) {
-        return data.stream().map(ScriptServiceUtil::transferObjectToRequestData).collect(Collectors.toSet());
+        if(data != null) {
+            return data.stream().map(ScriptServiceUtil::transferObjectToRequestData).collect(Collectors.toSet());
+        }
+        return new HashSet<RequestData>();
     }
 
     /**
@@ -342,15 +319,15 @@ public class ScriptServiceUtil {
      * @return
      */
     public static ExternalScriptTO externalScriptToTO(ExternalScript script) {
-        ExternalScriptTO ret = new ExternalScriptTO();
-        ret.setId(script.getId());
-        ret.setCreated(script.getCreated());
-        ret.setCreator(script.getCreator());
-        ret.setModified(script.getModified());
-        ret.setName(script.getName());
-        ret.setProductName(script.getProductName());
-        ret.setScript(script.getScript());
-        return ret;
+        return ExternalScriptTO.builder()
+                .withId(script.getId())
+                .withCreated(script.getCreated())
+                .withCreator(script.getCreator())
+                .withModified(script.getModified())
+                .withName(script.getName())
+                .withProductName(script.getProductName())
+                .withScript(script.getScript())
+                .build();
     }
 
     /**
@@ -377,9 +354,12 @@ public class ScriptServiceUtil {
             //Source: https://www.owasp.org/index.php/XML_External_Entity_(XXE)_Prevention_Cheat_Sheet#Unmarshaller
             SAXParserFactory spf = SAXParserFactory.newInstance();
             spf.setNamespaceAware(true);
+            spf.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
             spf.setFeature("http://xml.org/sax/features/external-general-entities", false);
             spf.setFeature("http://xml.org/sax/features/external-parameter-entities", false);
             spf.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
+            spf.setFeature(XMLConstants.FEATURE_SECURE_PROCESSING, true);
+            spf.setXIncludeAware(false);
 
             Source xmlSource = new SAXSource(spf.newSAXParser().getXMLReader(), new InputSource(inputStream));
 
